# system-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  COMPLETION_PLAN.md  COMPLETION_REPORT.md  Cargo.toml  DEVELOPMENT_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  MULTI_PANEL_COMPLETE.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  RELEASE_NOTES.md  STATUS.md  SUCCESS.md  TESTING_AD_USERS.md  TESTING_MOUSE_CLICK.md  TESTING_Q_ESC.md  TEST_PHASE3.md
.antigravitycli/: 6afcedbf-9187-4a60-9e31-379e9b5601bb.json
examples/: test_disk.rs  test_io.rs
release/: README.md
release/v0.1.0/: README.md
release/v0.1.0/debian/: README.md  system-monitor-v0.1.0-linux-x86_64.tar.gz.sha256
release/v0.1.0/redhat/: README.md  system-monitor-v0.1.0-linux-x86_64-static.tar.gz.sha256
release/v0.2.0/: README.md
release/v0.2.0/debian/: system-monitor-v0.2.0-linux-x86_64
release/v0.2.0/debian/.omc/state/sessions/3418ce9d-1184-4ce4-ac32-0eed6b0b6ca8/: last-tool-error-state.json  (+1 more)
release/v0.2.0/redhat/: system-monitor-v0.2.0-rhel-x86_64-static
release/v0.2.1/debian/: system-monitor-v0.2.1-ubuntu-x86_64
release/v0.2.1/redhat/: system-monitor-v0.2.1-rhel-x86_64-static
src/: lib.rs  main.rs
src/collectors/: cpu.rs  disk.rs  io.rs  memory.rs  mod.rs  network.rs  process.rs
src/core/: config.rs  error.rs  mod.rs  types.rs  utils.rs
src/gpu/: amd.rs  amd_process.rs  intel.rs  intel_process.rs  mod.rs  nvidia.rs
src/storage/: mod.rs
src/ui/: detail_popup.rs  detail_popup.rs.backup  layout.rs  mod.rs  state.rs  theme.rs  widgets.rs
(+1 files in other folders)
