[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"
authors = ["chihwei <chihweiwork@gmail.com>"]
description = "Unified system monitoring tool combining btop, atop, iotop, nvtop, and iftop"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.28"
crossterm = "0.28"
libc = "0.2"

[dev-dependencies]
